syntax = "proto3";
package heimdall.staking.v1beta1;

import "heimdall/types/validator.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/maticnetwork/heimdall/x/staking/types";


//option (gogoproto.sizer_all)        = false;
//option (gogoproto.marshaler_all)        = false;
//option (gogoproto.unmarshaler_all)        = false;

// GenesisState defines the staking module's genesis state.
message GenesisState {
  repeated heimdall.types.Validator validators = 1 ;
  heimdall.types.ValidatorSet current_val_set = 2 ;
  repeated string staking_sequences = 3;
}

// GenesisValidator genesis validator
message GenesisValidator {
  option (gogoproto.goproto_getters)  = false;

  heimdall.types.ValidatorID ID  = 1;
  uint64  start_epoch = 2;
  uint64  end_epoch = 3;
  uint64  nonce = 4;
  uint64  power = 5;
  string   pub_key = 6;
  string signer = 7;
}
